--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sk-0605",
 	"version": "0.0.2",
 	"publishConfig": {
-		"access": "restricted"
+		"access": "public"
 	},
 	"scripts": {
 		"dev": "vite dev",
