--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sk": "npm:sk-0605@^0.0.2"
+	}
 }
