--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"gen-output": "gql.tada generate-output"
 	},
 	"exports": {
 		".": {
@@ -34,6 +35,7 @@
 		"svelte": "^5.0.0-next.1"
 	},
 	"devDependencies": {
+		"@0no-co/graphqlsp": "^1.12.5",
 		"@changesets/cli": "^2.27.5",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -60,6 +62,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"gql.tada": "^1.7.5",
 		"sk": "npm:sk-0605@^0.0.2"
 	}
 }
